# morphflow-swap-engine

./: .gitignore  FACEFUSION_FORK_CHANGELOG.md  MORPHFLOW_SWAP_ENGINE_PLAN.md  README.md  morphflow_swap_engine.ini  mypy.ini  pyproject.toml  requirements-dev.txt  run_morphflow_swap_engine.py
.github/workflows/: ci.yml
facefusion/: audio.py  face_masker.py  memory.py  metadata.py  program.py
facefusion/uis/: core.py
facefusion/uis/components/: about.py  benchmark_options.py  face_selector.py
facefusion/uis/layouts/: benchmark.py  default.py  webcam.py
src/morphflow_swap_engine/: __init__.py  __main__.py
src/morphflow_swap_engine/adapters/cli/: __init__.py
src/morphflow_swap_engine/adapters/morphflow/: __init__.py  adapter.py  feature_flag.py  request_mapper.py  response_mapper.py
src/morphflow_swap_engine/application/use_cases/: __init__.py  swap_video_use_case.py
src/morphflow_swap_engine/config/: __init__.py  loader.py  profiles.py  schema.py
src/morphflow_swap_engine/core/contracts/: __init__.py  i_artifact_store.py  i_benchmark_runner.py  i_face_aligner.py  i_face_detector.py  i_face_restorer.py  i_face_swapper.py  i_face_tracker.py  i_temporal_stabilizer.py  i_video_decoder.py  i_video_encoder.py
src/morphflow_swap_engine/core/entities/: __init__.py  detected_face.py  reference_face_asset.py  swap_request.py  swap_result.py  target_video_asset.py  tracked_face_sequence.py
src/morphflow_swap_engine/core/services/: __init__.py  detection_filter.py  face_crop_strategy.py  face_metrics.py  primary_face_selector.py  reference_face_analyzer.py  target_video_analyzer.py  track_scorer.py
src/morphflow_swap_engine/core/value_objects/: __init__.py  benchmark_case.py  benchmark_run.py  engine_profile.py  face_alignment_result.py  face_crop_plan.py  reference_face_analysis.py  runtime_report.py  stage_artifact.py  (+2 more)
src/morphflow_swap_engine/tests/: test_cli.py  test_engine_imports.py  test_phase2_detection.py  test_phase3_tracking.py  test_phase4_alignment.py
tests/: helper.py  test_cli_age_modifier.py  test_cli_background_remover.py  test_cli_batch_runner.py  test_cli_expression_restorer.py  test_cli_face_debugger.py  test_cli_face_editor.py  test_cli_face_enhancer.py  test_cli_face_swapper.py  test_cli_frame_colorizer.py  test_cli_frame_enhancer.py  test_cli_job_manager.py  test_cli_job_runner.py  test_cli_lip_syncer.py  test_cli_output_scale.py
(+20 files in other folders)
