[project]
name = "morphflow-swap-engine"
version = "0.1.0"
description = "MorphFlow face swap engine baseline for modular engine migration"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
