[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphflow-swap-engine"
version = "0.1.0"
description = "MorphFlow modular face swap engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "insightface==0.7.3",
    "numpy==2.2.1",
    "onnx==1.20.1",
    "onnxruntime-gpu==1.20.1",
    "opencv-python==4.13.0.92",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
]

[project.scripts]
morphflow-swap-engine = "morphflow_swap_engine.adapters.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = false
